--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ tags
 /backend/deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
+/backend/doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
