changed directory order

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,16 @@
 tags
 
 # The directory Mix will write compiled artifacts to.
-/backend/_build/
+/_build/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
 
 # The directory Mix downloads your dependencies sources to.
-/backend/deps/
+/deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-/backend/doc/
+/doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
