--- a/database_scripts/cms/Makefile
+++ b/database_scripts/cms/Makefile
@@ -1,4 +1,4 @@
-.PHONY: help clean generate seed createdb dropdb
+.PHONY: help clean generate seed createdb 
 help:
 	@echo "clean - drops schema cms"
 	@echo "generate - create schema, insert tables..."
@@ -19,9 +19,8 @@ seed:
 	psql -U postgres -d rasmus -f seed.sql
 
 createdb:
-	createdb -U postgres rasmus
+	if [ `psql -U postgres -c "SELECT * from pg_database WHERE datname='rasmus'" | grep row | cut -c2` -eq "0" ]; then \
+		createdb -U postgres rasmus; \
+	fi;	
 
-dropdb:
-	dropdb -U postgres rasmus
-
-all: clean generate seed
+all: createdb clean generate seed
