replace tabs with spaces

--- a/database_scripts/core/Makefile
+++ b/database_scripts/core/Makefile
@@ -3,9 +3,8 @@ help:
 	@echo "clean - drops schema core"
 	@echo "generate - create schema, insert tables..."
 	@echo "seed - insert inital values for tables"
-	@echo "createdb - creates database rasmus"
-	@echo "dropdb - drops database rasmus"
-	@echo "all - target for: clean, generate, seed"
+	@echo "createdb - creates database rasmus, if not exists"
+	@echo "all - target for: createdb, clean, generate, seed"
 
 clean:
 	psql -U postgres -d rasmus -f clean.sql
