--- a/database_scripts/core/Makefile
+++ b/database_scripts/core/Makefile
@@ -12,7 +12,9 @@ clean:
 generate:
 	psql -U postgres -d rasmus -f init.sql
 	psql -U postgres -d rasmus -f tables.sql
-	psql -U postgres -d rasmus -f transfer.sql
+	psql -U postgres -d rasmus -f notifications.sql
+	psql -U postgres -d rasmus -f transfer_functions.sql
+	psql -U postgres -d rasmus -f set_dirty_functions.sql
 	psql -U postgres -d rasmus -f manager.sql
 	psql -U postgres -d rasmus -f postcreate.sql
 
