moved usser_account to own file

--- a/database_scripts/core/Makefile
+++ b/database_scripts/core/Makefile
@@ -12,10 +12,10 @@ clean:
 generate:
 	psql -U postgres -d rasmus -f init.sql
 	psql -U postgres -d rasmus -f notifications.sql
+	psql -U postgres -d rasmus -f transfer.sql
 	psql -U postgres -d rasmus -f privilege.sql
 	psql -U postgres -d rasmus -f role.sql
-	psql -U postgres -d rasmus -f tables.sql
-	psql -U postgres -d rasmus -f transfer.sql
+	psql -U postgres -d rasmus -f user_account.sql
 	psql -U postgres -d rasmus -f set_dirty_functions.sql
 	psql -U postgres -d rasmus -f postcreate.sql
 
