--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ tags
 /deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
+/api-doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
@@ -24,3 +24,7 @@ erl_crash.dump
 
 # generated with `make core_schema`
 core_schema.png
+
+# landing_page
+/landing_page/dist
+/landing_page/node_modules
