--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,17 @@ core_schema.png
 # landing_page
 /landing_page/dist
 /landing_page/node_modules
+
+# frontend
+/frontend/node_modules
+/frontend/coverage
+/frontend/build
+/frontend/.DS_Store
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+
