moved some seed stuff to api_queries.sh

--- a/database_scripts/Makefile
+++ b/database_scripts/Makefile
@@ -1,14 +1,19 @@
-.PHONY: help clean generate seed createdb 
+.PHONY: default
+default: help
+
+.PHONY: help 
 help:
 	@echo "clean - drops schema core"
 	@echo "generate - create schema, insert tables..."
-	@echo "seed - insert inital values for tables"
+	@echo "seed - fire some test queries towwards the database - DO NOT USE IN PRODUCTION!"
 	@echo "createdb - creates database rasmus, if not exists"
 	@echo "all - target for: createdb, clean, generate, seed"
 
+.PHONY: clean
 clean:
 	psql -U postgres -d rasmus -f clean.sql
 
+.PHONY: generate
 generate:
 	psql -U postgres -d rasmus -f init.sql
 	psql -U postgres -d rasmus -f notifications.sql
@@ -24,12 +29,20 @@ generate:
 	psql -U postgres -d rasmus -f graph_edge.sql
 	psql -U postgres -d rasmus -f postcreate.sql
 
+.PHONY: seed
 seed:
+	# DO NOT USE IN PRODUCTION!
 	psql -U postgres -d rasmus -f seed.sql
 
+.PHONY: init
+init:
+	./api_queries.sh
+
+.PHONY: createdb
 createdb:
 	if [ `psql -U postgres -c "SELECT * from pg_database WHERE datname='rasmus'" | grep row | cut -c2` -eq "0" ]; then \
 		createdb -U postgres rasmus; \
 	fi;	
 
-all: createdb clean generate seed
+.PHONY: all
+all: createdb clean generate
